1. Removed unnecessary endpoints that were not in the specification. 2. Added policy (use spatie/laravel-permission) 3. Implemented the Repository and Service pattern 4. Add index parent_id in migrations for tasks
